# checkers-bot-tournament

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-ci.yml
checkers_bot_tournament/: board.py  checkers_util.py  controller.py  game.py  game_result.py  main.py  move.py  piece.py
checkers_bot_tournament/bots/: base_bot.py  bot_tracker.py  copycat.py  first_mover.py  greedycat.py  random_bot.py  scaredycat.py
tests/: test_piece.py
